--- a/delivery.html
+++ b/delivery.html
@@ -23,7 +23,7 @@
 		</div>
 		
 		<center>
-			<h1><img id='deliveryImg' src="images/delivery.png"></img></h1>
+			<h1><img id='deliveryImg' src="https://karlacafe.github.io/images/delivery.PNG"></img></h1>
 		
 
 			<h1><font><label id='thingHere'>Click button below to see if we are delivering:</label></font></h1>
