--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
 		</div>
 		
 	<center>
-		<h1><img id="contractImg" src="https://karlacafe.github.io/images/contract.PNG"></img></h1>
+		<h1><img id="contractImg" src="https://karlacafe.github.io/images/contact.PNG"></img></h1>
 		<br><br><br>
 		<font>Your Email:</font><input type="text" id='emailTextBox'><br>
 		<font>Your Subject:</font><input type="text" id='subjectTextBox'><br>
