--- a/index.html
+++ b/index.html
@@ -2,15 +2,27 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en-US" xml:lang="en-US">
 	<head>
-		<script src="js/liveclock_lite.js"></script>
+		<script src="js/liveclock_lite.js">
+		/*
+Live Clock Script-
+By Mark Plachetta (astro@bigpond.net.au(c)) based on code from DynamicDrive.com
+For full source code, 100's more DHTML scripts, and Terms Of Use,
+visit http://www.dynamicdrive.com
+*/
+		
+		</script>
 		<link rel="stylesheet" type="text/css" href="css/mystyle.css">
 		<link rel="stylesheet" type="text/css" href="css/index.css">
 	</head>
+	<!--Body of the page-->
 	<body onLoad="show_clock();">
+	
+	<!-- Welcome audio Box--> <!-- audio citation https://www.youtube.com/watch?v=hW_mrBH_8j4 by: Berlin Atmospheres-->
 		<audio autoplay>
 			<source src="audio/welcome.mp3" type='audio/mpeg'>
 		</audio>
 		
+		<!--Menu List-->
 		<div>
 			<table>
 				<tr>
@@ -36,3 +48,4 @@
 
 
 </html> 
+
