--- a/delivery.html
+++ b/delivery.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en-US" xml:lang="en-US">
 	<head>
-		<script src="js/liveclock_lite.js"></script>
+		<script src="js/liveclock_lite.js">
+		/*
+Live Clock Script-
+By Mark Plachetta (astro@bigpond.net.au(c)) based on code from DynamicDrive.com
+For full source code, 100's more DHTML scripts, and Terms Of Use,
+visit http://www.dynamicdrive.com
+*/
+		</script>
 		<script src="js/checktime.js"></script>
 		<link rel="stylesheet" type="text/css" href="css/mystyle.css">
 		<link rel="stylesheet" type="text/css" href="css/delivery.css">
 	</head>
 	
+	<!--Body of the page-->
 	<body onLoad="show_clock();">
-
+	
+		<!--Menu List-->
 		<div >
 			<table>
 				<tr>
@@ -23,9 +32,9 @@
 		</div>
 		
 		<center>
-			<h1><img id='deliveryImg' src="https://karlacafe.github.io/images/delivery.PNG"></img></h1>
+			<h1><img id='deliveryImg' src="images/delivery.png"></img></h1>
 		
-
+<!--If Function-->
 			<h1><font><label id='thingHere'>Click button below to see if we are delivering:</label></font></h1>
 			<br><br>
 			<button type="button" onClick="checkTime();">Are we delivering?</button>
