--- a/menu.html
+++ b/menu.html
@@ -31,7 +31,7 @@ visit http://www.dynamicdrive.com
 		</div>
 		<a name="menuBegin"></a>
 		<center>
-			<h1><img id="menuImg" src="images/menu.png"></img></h1>
+			<h1><img id="menuImg" src="https://karlacafe.github.io/images/menu.PNG"></img></h1>
 		</center>
 	
 		<center>
@@ -42,7 +42,7 @@ visit http://www.dynamicdrive.com
 								<div class="centerT">
 									<font size="72">Sandwiches</font>
 									<br>
-									<img id="sandwichImg" src="images/sandwich.jpg">
+									<img id="sandwichImg" src="https://karlacafe.github.io/images/sandwich.JPG">
 								/*https://miami.eat24hours.com/files/cuisines/v4/sandwiches.jpg*/
 									</img>
 									<br><br>
@@ -67,7 +67,7 @@ visit http://www.dynamicdrive.com
 							
 									<font size="72">Salads </font> 
 									<br>
-									<img id="saladImg" src="images/salad.jpg">
+									<img id="saladImg" src="https://karlacafe.github.io/images/salad.JPG">
 									/*https://www.panerabread.com/foundation/menu/details/thai-chicken-salad-whole.jpg/_jcr_content/renditions/thai-chicken-salad-whole.desktop.jpeg*/
 	 								/*By: Panera Bread*/
 									</img>
@@ -94,7 +94,7 @@ visit http://www.dynamicdrive.com
 							<div class="centerT">
 								<font size="72">Bevarages </font>
 								<br>
-								<img id="drinkImg" src="images/drinks.jpg">
+								<img id="drinkImg" src="https://karlacafe.github.io/images/drinks.JPG">
 								/*https://www.einsteinbros.com/images/bg-menu-beverages.jpg*/
 								</img>
 							
