--- a/menu.html
+++ b/menu.html
@@ -43,7 +43,7 @@ visit http://www.dynamicdrive.com
 									<font size="72">Sandwiches</font>
 									<br>
 									<img id="sandwichImg" src="https://karlacafe.github.io/images/sandwich.JPG">
-								/*https://miami.eat24hours.com/files/cuisines/v4/sandwiches.jpg*/
+								<!--https://miami.eat24hours.com/files/cuisines/v4/sandwiches.jpg-->
 									</img>
 									<br><br>
 								
@@ -68,8 +68,8 @@ visit http://www.dynamicdrive.com
 									<font size="72">Salads </font> 
 									<br>
 									<img id="saladImg" src="https://karlacafe.github.io/images/salad.JPG">
-									/*https://www.panerabread.com/foundation/menu/details/thai-chicken-salad-whole.jpg/_jcr_content/renditions/thai-chicken-salad-whole.desktop.jpeg*/
-	 								/*By: Panera Bread*/
+									<!--https://www.panerabread.com/foundation/menu/details/thai-chicken-salad-whole.jpg/_jcr_content/renditions/thai-chicken-salad-whole.desktop.jpeg*/
+	 								/*By: Panera Bread-->
 									</img>
 		
 									<br><br>
@@ -95,7 +95,7 @@ visit http://www.dynamicdrive.com
 								<font size="72">Bevarages </font>
 								<br>
 								<img id="drinkImg" src="https://karlacafe.github.io/images/drinks.JPG">
-								/*https://www.einsteinbros.com/images/bg-menu-beverages.jpg*/
+								<!--https://www.einsteinbros.com/images/bg-menu-beverages.jpg-->
 								</img>
 							
 								<br><br>
