--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@ visit http://www.dynamicdrive.com
 		
 	<!-- Contact email box-->
 	<center>
-		<h1><img id="contractImg" src="images/contact.png"></img></h1>
+		<h1><img id="contractImg" src="https://karlacafe.github.io/images/contact.PNG"></img></h1>
 		<br><br><br>
 		<font>Your Email:</font><input type="text" id='emailTextBox'><br>
 		<font>Your Subject:</font><input type="text" id='subjectTextBox'><br>
