Our first commit via git bash

--- a/delivery.html
+++ b/delivery.html
@@ -32,12 +32,33 @@ visit http://www.dynamicdrive.com
 		</div>
 		
 		<center>
-			<h1><img id='deliveryImg' src="https://karlacafe.github.io/images/delivery.PNG"></img></h1>
+			<h1><img id='deliveryImg' src="images/delivery.png"></img></h1>
 		
 <!--If Function-->
 			<h1><font><label id='thingHere'>Click button below to see if we are delivering:</label></font></h1>
 			<br><br>
 			<button type="button" onClick="checkTime();">Are we delivering?</button>
+			<br><br>
+			
+			
+			<div class="centerT">
+			<h2> Frequently Asked Questions </h2>
+				<dl>
+					<dt>How long does a delivery take?</dt>
+					<dd>From 30-40 minutes</dd>
+					<dd><br></dd>
+					<dt>Is there a delivery fee?</dt>
+					<dd>We do not have a delivery fee!</dd>
+					<dd><br></dd>
+					<dt>If I don't want delivery, can I also order for pick up?</dt>
+					<dd>You can definitely order for pick-up!</dd>
+					<dd><br></dd>
+					<dt>What's the travel range for the delivery?</dt>
+					<dd>10 miles within our radius!</dd>
+				</dl>
+			</div>
+			
+			
 		</center>	
 	</body>
 </html>
