--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@ visit http://www.dynamicdrive.com
 		</script>
 		<link rel="stylesheet" type="text/css" href="css/mystyle.css">
 		<link rel="stylesheet" type="text/css" href="css/index.css">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+		<script src='js/index.js'></script>
 	</head>
 	<!--Body of the page-->
 	<body onLoad="show_clock();">
@@ -40,6 +42,7 @@ visit http://www.dynamicdrive.com
 		<center>
 			<img src="images/banner.PNG"></img>
 		</center>
+	
 		
 	</body>
 
@@ -48,4 +51,3 @@ visit http://www.dynamicdrive.com
 
 
 </html> 
-
