Solving the sandwich problem

--- a/menu.html
+++ b/menu.html
@@ -42,7 +42,7 @@ visit http://www.dynamicdrive.com
 								<div class="centerT">
 									<font size="72">Sandwiches</font>
 									<br>
-									<img id="sandwichImg" src="images/sandwich.jpg"></img>
+									<img id="sandwichImg" src="images/sandwich.png"></img>
 									<br><br>
 								
 								<!--Sandwich List--> 
