--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ visit http://www.dynamicdrive.com
 		<br>
 		<br>
 		<center>
-			<img src="images/banner.PNG"></img>
+			<img src="images/banner.png"></img>
 		</center>
 	
 		
